Bug 150802 - It Doesn't Applies a gradient prefectly on the shapes.
Summary: It Doesn't Applies a gradient prefectly on the shapes.
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
: 151371 (view as bug list)
Depends on:
Blocks: Impress-Gradient
  Show dependency treegraph
 
Reported: 2022-09-05 17:32 UTC by marcospupy10
Modified: 2023-05-21 06:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The bug about the imperfect gradient (1.40 MB, video/mp4)
2022-09-05 18:02 UTC, marcospupy10
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marcospupy10 2022-09-05 17:32:55 UTC
Description:
When i make a shape and i want to make a gradient, it doesnt applies a gradient, when i set the default upper color to white and then i set the lower color to black, the upper color gets still and it doesn't sets perfectly to white.

Steps to Reproduce:
1. Make A Shape
2. Set The Color Into Gradient
3. Put The Upper Default Color Into The Color You Want
4. Put The Lower Default Color Into Another Color You Want

Actual Results:
It Doesn't Makes A Perfect Gradient, It keeps it to the default upper/lower color

Expected Results:
it must have a perfect gradient, (for example it must be from the default upper color to white, the same must happen with the default lower color to black)


Reproducible: Always


User Profile Reset: Yes



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: PresentationDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 marcospupy10 2022-09-05 18:02:17 UTC
Created attachment 182235 [details]
The bug about the imperfect gradient
Comment 2 Rafael Lima 2022-09-06 13:19:34 UTC
Repro with

Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

Indeed, clicking the upper left and right colors do not update the selected color correctly.

Not repro with

Version: 7.3.6.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.6~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded
Comment 3 raal 2022-09-07 20:40:41 UTC
This seems to have begun at the below commit.
Adding Cc: to Samuel Mehrbrodt ; Could you possibly take a look at this one?
Thanks
 6d4799bb2222764865bc3a431c010bbc5193952c is the first bad commit
commit 6d4799bb2222764865bc3a431c010bbc5193952c
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jun 24 19:56:51 2022 +0200

    source adc536e9efc77690df62177aa722f9252bdbf96b

https://git.libreoffice.org/core/+/adc536e9efc77690df62177aa722f9252bdbf96b
Comment 4 Samuel Mehrbrodt 2022-09-19 12:31:04 UTC
Fix pending: https://gerrit.libreoffice.org/c/core/+/140151

@marcospupy10@gmail.com I just noticed this was assigned to you - did you work on this bug? If so, please set the status to Assigned next time.
Comment 5 Commit Notification 2022-09-19 14:15:48 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/29cba5c6fd36280107115b58aae61e5ead7e4d6a

tdf#150802 Fix setting gradient from Sidebar

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-09-20 15:32:35 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/dbd89ccc4fd989f12d42ebcb68aa56ab969e84bd

tdf#150802 Fix setting gradient from Sidebar

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Rafael Lima 2022-10-06 19:02:44 UTC
*** Bug 151371 has been marked as a duplicate of this bug. ***
Comment 8 helga 2022-12-08 01:35:50 UTC Comment hidden (spam)
Comment 9 Jason Warren 2022-12-31 04:25:51 UTC Comment hidden (spam)
Comment 10 listen950903 2023-01-06 07:18:07 UTC Comment hidden (spam)
Comment 11 listen950903 2023-01-06 07:20:16 UTC Comment hidden (spam)
Comment 12 udayuma 2023-01-18 18:19:25 UTC Comment hidden (spam)
Comment 13 Ari Korhonen 2023-02-28 17:56:04 UTC Comment hidden (spam)
Comment 14 Devi Hoger 2023-03-04 10:12:37 UTC Comment hidden (spam)
Comment 15 GPT4 Login 2023-03-17 15:11:42 UTC
OpenAI unveils ChatGPT successor with 'human-level' performance based on
GPT-4 capable of passing bar exam with a score in the top 10 percent of

<a href="https://gpt4login.com/">GPT4 Login</a>
Comment 16 ChatGPT 2023-03-19 23:19:01 UTC
It sounds like you're having some trouble with applying gradients to your shapes in your design software. Have you tried adjusting the gradient settings to see if that solves the issue? Alternatively, you could try experimenting with different color combinations to see if that helps. If you're still having trouble, try <a href="https://chatgptfy.com/">Chat GPT Login</a> might be able to assist you further. As an AI language model, can help with a variety of design-related questions. Good luck!
Comment 17 Spammer 2023-05-20 20:55:22 UTC Comment hidden (spam)
Comment 18 Spammer 2023-05-20 20:58:27 UTC Comment hidden (obsolete)