tdf#150802 Fix setting gradient from Sidebar

Regression from adc536e9efc77690df62177aa722f9252bdbf96b

Change-Id: I37db76373a3b9b4a1084e830233561abc4b1e6d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140151
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>